feat: Use virtual threads
Signed-off-by: Ronny Trommer <ronny@no42.org>